--- a/smskannel3.conf
+++ b/smskannel3.conf
@@ -40,3 +40,11 @@ password = app125
 concatenation= true
 max-messages = 0
 
+group = sms-service
+keyword = default
+get-url = "http://192.168.2.1/finance_gsmsep/receive_sms.php?sender=%p&amp;text=%b"
+accept-x-kannel-headers = true
+max-messages = 3
+concatenation = true
+catch-all = true
+
